--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "konva": "^4.2.2",
+    "konva-react": "^0.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-konva": "^16.13.0-0",
+    "react-pdf": "^4.1.0",
+    "react-scripts": "3.4.1",
+    "styled-components": "^5.1.0",
+    "use-image": "^1.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
